--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 {
                     platform: "X (Twitter)",
                     url: "https://x.com/Mohamed10824378",
-                    icon: "fab fa-x-twitter"
+                    icon: "fab fa-twitter"
                 },
                 {
                     platform: "YouTube",
@@ -308,7 +308,7 @@
                 {
                     platform: "Threads",
                     url: "https://www.threads.net/@msayed.cs",
-                    icon: "fab fa-threads"
+                    icon: "fas fa-at"
                 },
                 {
                     platform: "Facebook",
