--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
     <div class="container">
         <!-- Profile Section -->
-        <img src="https://via.placeholder.com/120x120/667eea/white?text=YOU" alt="Profile Picture" class="profile-image" id="profileImage">
+        <img src="profile-pic.jpeg" alt="Profile Picture" class="profile-image" id="profileImage">
         <h1 id="profileName">Your Name</h1>
         <p class="headline" id="profileHeadline">Your Professional Headline • Location</p>
 
