--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
             // Personal Info
             name: "Mohamed Sayed",
             headline: "Mobile Lead • Flutter + AI Architect • MSc Data Science 🚀",
-            profileImage: "https://avatars.githubusercontent.com/u/20269142?v=4", // GitHub profile image as fallback
+            profileImage: "./profile-pic.jpeg", // GitHub profile image as fallback
             profileInitials: "MS", // Fallback initials
             
             // Main Links (these appear as buttons)
