--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                 },
                 {
                     title: "Email Me",
-                    url: "mailto:contact@msayed.net", // Update with your email
+                    url: "mailto:msayed95@icloud.com", // Update with your email
                     icon: "fas fa-envelope"
                 }
             ],
